k8s/mysql-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: Production
  labels:
    app: database
spec:
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labesl:
        app: database
    spec:
      containers:
      - image: mysql:8
        name: database
        ports:
        - containerport: 3306
          name: database
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
